Fixed aligning of 5 day forecast and new buttons does NOT move down the 5 day forecast when new buttons are added to the page.

--- a/Weather.css
+++ b/Weather.css
@@ -12,6 +12,14 @@ strong{
    text-align: center;
 }
 
+#fontProp{
+   font-size: 20px;
+   font-weight: bold;
+}
+
+.col-md-2{
+   height: ;
+}
 .img-fluid{
    min-height: 100%;
    min-width: 1024px;
@@ -29,7 +37,6 @@ strong{
 } 
   h1{
    font-size: 40px;
-   padding: 20px;
    margin-top: 4px;
 }  
 
@@ -53,7 +60,7 @@ strong{
    padding: 14px;
    cursor: pointer;
    text-align: left;
-   height: 400px;
+   height: 250px;
 }
 
 #buttonList button{
